# epicurious-scraper

./: pyproject.toml
epicurious_scraper/: __main__.py
tests/: test_epicurious_scraper.py
